        (DFG):
        (GPRInfo):
        (JSC::DFG::GPRInfo::toRegister):
        (JSC::DFG::GPRInfo::toIndex):
        (JSC::DFG::GPRInfo::debugName):
        * dfg/DFGSpeculativeJIT.h:
        (SpeculativeJIT):
        * jit/JSInterfaceJIT.h:
        (JSInterfaceJIT):
        * runtime/JSGlobalData.h:
        (JSC::ScratchBuffer::allocationSize):
        (ScratchBuffer):

2013-01-07  Balazs Kilvady  <kilvadyb@homejinni.com>

        MIPS LLInt implementation.
        https://bugs.webkit.org/show_bug.cgi?id=99706

        Reviewed by Filip Pizlo.

        LLInt implementation for MIPS.

        * assembler/MacroAssemblerMIPS.h:
        (JSC::MacroAssemblerMIPS::jump):
        * dfg/DFGOperations.cpp:
        (JSC):
        * jit/JITStubs.cpp:
        (JSC):
        * jit/JITStubs.h:
        (JITStackFrame):
        * llint/LLIntOfflineAsmConfig.h:
        * llint/LowLevelInterpreter.asm:
        * llint/LowLevelInterpreter32_64.asm:
        * offlineasm/backends.rb:
        * offlineasm/instructions.rb:
        * offlineasm/mips.rb: Added.

2013-02-27  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt][Mac] Fix massive parallel builds

        Reviewed by Tor Arne Vestbø.

        There exists a race condition that LLIntDesiredOffsets.h is written to
        by two parllel instances of the ruby script. This patch ensures that similar to the output file,
        the generated file is also prefixed according to the build configuration.

        * LLIntOffsetsExtractor.pro:

2012-12-18  Mark Hahnenberg  <mhahnenberg@apple.com>

        Restrictions on oversize CopiedBlock allocations should be relaxed
        https://bugs.webkit.org/show_bug.cgi?id=105339

        Reviewed by Filip Pizlo.

        Currently the DFG has a single branch in the inline allocation path for property/array storage where 
        it checks to see if the number of bytes requested will fit in the current block. This does not match 